--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <activity
             android:name=".view.MapsActivity"
             android:label="@string/title_activity_maps">
+
+        </activity>
+        <activity
+            android:name=".view.WebViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
