--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,15 +32,15 @@
         <activity
             android:name=".view.MapsActivity"
             android:label="@string/title_activity_maps">
-
-        </activity>
-        <activity
-            android:name=".view.WebViewActivity">
-            <intent-filter>
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".view.WebViewActivity">
         </activity>
     </application>
 
